[tool.poetry]
name = "ewe_ml"
version = "0.1.0"
description = ""
authors = ["Florian <florian@flova.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
tabulate = "^0.9.0"
argparse = "^1.4.0"
torchvision = "^0.13.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
