[tool.poetry]
name = "ewe_ml"
version = "0.1.0"
description = ""
authors = ["Florian <florian@flova.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.9.0"
argparse = "^1.4.0"
tqdm = "^4.64.1"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
